crux-mir-comp/test/symb_eval/comp/subst_output.good
test subst_output/<DISAMB>::use_f[0]: FAILED

failures:

---- subst_output/<DISAMB>::use_f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:45:9: 45:79 !test/symb_eval/comp/subst_output.rs:32:5: 32:30: error: in subst_output/<DISAMB>::use_f[0]
[Crux]   MIR assertion at test/symb_eval/comp/subst_output.rs:32:5:
[Crux]   	b0 == a

[Crux] Overall status: Invalid.
